@startuml
abstract class Command {
    +execute(storage, workouts, ui, profile)
    +isExit() : boolean
}

class ViewLastLiftCommand {
    -exerciseId : String
    +execute(storage, workouts, ui, profile)
}

class WorkoutList {
    +getSize() : int
    +getWorkoutAtIndex(index) : Workout
}

class StrengthWorkout {
    +getWeight() : double
    +getSets() : int
    +getReps() : int
}

class Ui {
    +showLastLift(lift : StrengthWorkout)
    +showMessage(message : String)
}

Command <|-- ViewLastLiftCommand
ViewLastLiftCommand --> WorkoutList
ViewLastLiftCommand --> Ui
WorkoutList --> StrengthWorkout
@enduml
